# pyTelops

./: .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.rst  DEVELOPMENT.md  LICENSE  PYPI_README.rst  README.rst  Showcase.ipynb  TROUBLESHOOTING.rst  pyproject.toml  requirements.dev.txt  requirements.txt  sync_version.py  telops_what_we_can_deliver.md
.github/workflows/: publish.yml  release-and-publish-to-pypi.yml  testing.yml
docs/: requirements.txt  rtd_postbuild.py
docs/source/: calibration.rst  camera.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  index.rst  streaming_and_buffer.rst  troubleshooting.rst
docs/source/_static/: ai-buttons.css  ai-buttons.js
docs/superpowers/plans/: 2026-05-13-pygigevision-extraction.md
docs/superpowers/specs/: 2026-05-13-pygigevision-extraction-design.md
examples/: 01_connect_and_grab.py  02_continuous_live.py  03_buffer_record.py  04_calibration_load.py  05_external_trigger.py  06_force_ip.py  07_robust_download.py  README.rst  basic_usage.py  buffer_recording.py  external_trigger.py
pyTelops/: __init__.py  camera.py  cli.py  connection.py  errors.py  gui.py  gvcp.py  gvsp.py  provisioning.py  registers.py
tests/: _check_state.py  _force_release_ccp.py  _verify_data.py  conftest.py  hw_test_01_connect.py  hw_test_02_dirty_reconnect.py  hw_test_03_grab.py  hw_test_04_grab_timeout.py  hw_test_05_properties.py  hw_test_06_buffer.py  hw_test_07_download_speed.py  hw_test_08_stream.py  hw_test_09_state.py  hw_test_10_error_recovery.py  hw_test_all.py  test_camera.py  test_cli.py  test_connection.py  test_discovery_reachability.py  test_download_integrity.py  test_enum_resolution.py  test_gvcp.py  test_gvsp.py  test_hardware.py  test_registers.py
