[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyTelops"
version = "0.2.0"
description = "Pure-Python driver for Telops thermal cameras over GigE Vision"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jaša Šonc"},
]
keywords = ["telops", "thermal", "camera", "gige", "vision", "infrared", "MWIR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy>=1.20",
    "tqdm",
    "pyGigEVision @ git+ssh://git@github.com/ladisk/pyGigEVision.git@v0.1.0",
]

[project.optional-dependencies]
gui = ["Pillow", "matplotlib"]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "flake8", "sphinx", "sphinx-rtd-theme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: requires a connected Telops camera",
]

[project.scripts]
pytelops = "pyTelops.cli:main"

[project.urls]
Homepage = "https://github.com/ladisk/pyTelops"
Repository = "https://github.com/ladisk/pyTelops"
Issues = "https://github.com/ladisk/pyTelops/issues"
